Add early and experimental version of DIV

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,10 @@ name = "count"
 path = "src/count.rs"
 
 [[bin]]
+name = "div"
+path = "src/div.rs"
+
+[[bin]]
 name = "hello"
 path = "src/hello.rs"
 
